WIP - do not merge
Experiment with Java's `Vector` API to use SIMD whilst scanning input
Currently not observed as more performant whilst processing WatDiv NT files

NOTE: multithreaded is somehow returning inconsistent results!