@@ -56,3 +56,31 @@ tasks.withType(JavaCompile::class.java) {
     sourceCompatibility = "21"
     targetCompatibility = "21"
 }
+
+
+
+// src: https://slack-chats.kotlinlang.org/t/486856/anyone-knows-how-to-create-gradle-javaexec-configuration-for#20242df1-da93-4272-8f2e-168a8891a398
+val jvmJar = tasks.named("jvmJar")
+val jvmRuntimeClasspath = configurations.named("jvmRuntimeClasspath")
+
+val runTurtleTest = tasks.register("runTurtleTest", JavaExec::class) {
+    group = "verification"
+    mainClass.set("TestKt")
+    this.environment["INPUT_FILE"] = "path/to/data.nt"
+
+    // required for the vector API to be available
+    jvmArgs("--add-modules=jdk.incubator.vector")
+    // alternatively, all these can be enabled to see the compiled result
+//    jvmArgs(
+//        "--add-modules=jdk.incubator.vector",
+//        // from https://jornvernee.github.io/hotspot/jit/2023/08/18/debugging-jit.html
+//        "-Xbatch",
+//        "-XX:+UnlockDiagnosticVMOptions",
+//        "-XX:-TieredCompilation",
+//        "-XX:PrintAssemblyOptions=intel",
+//        "-XX:CompileCommand=dontinline,dev.tesserakt.rdf.serialization.util.FileCharStream::findWhitespaceEscapeSequenceOr",
+//        "-XX:CompileCommand=print,dev.tesserakt.rdf.serialization.util.FileCharStream::findWhitespaceEscapeSequenceOr",
+//    )
+
+    classpath(jvmJar, jvmRuntimeClasspath)
+}
